--- a/web/index.html
+++ b/web/index.html
@@ -31,8 +31,32 @@
 
   <title>interntask</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- ✅ Firebase SDKs (no modules) -->
+  <script src="https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/12.0.0/firebase-analytics.js"></script>
+
+  <script>
+    // ✅ Firebase config copied from your Firebase console
+    const firebaseConfig = {
+      apiKey: "AIzaSyANzNmokpqQzm7HjSRKuW_t8BXaLgBuB3k",
+      authDomain: "interntask-41be2.firebaseapp.com",
+      projectId: "interntask-41be2",
+      storageBucket: "interntask-41be2.firebasestorage.app",
+      messagingSenderId: "228043066675",
+      appId: "1:228043066675:web:aa79490f4f1ab004140246",
+      measurementId: "G-C3YPZRDTMJ"
+    };
+
+    // ✅ Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+  <!-- ✅ Firebase setup complete -->
+
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
+
